# FileTool

./: COMPLETED-PLANS.md  Cargo.toml  LICENSE  PLANS.md  README.md  schema.csvdb.json
.github/: CODEOWNERS  copilot-instructions.md
fileutil/: CHECKLIST.md  Cargo.toml
fileutil/src/: lib.rs  main.rs  schema.rs
fileutil/src/commands/: DESIGN-NOTES.md  mod.rs
fileutil/src/commands/enum/: CHECKLIST.md  mod.rs
fileutil/src/commands/ls/: mod.rs
fswalk/: Cargo.toml  DESIGN-NOTES.md
fswalk/src/: lib.rs  mem.rs
fswalk/src/platform/: mod.rs  unix.rs  windows.rs
tests/: cli_tests.rs
